Adicionando arquivos para o repositorio

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <input type="submit" value="Acessar" class="submit">
 
-                <a href="#" class="recuperar_senha">Esqueceu sua senha?</a>
+                <a href="#" class="recuperar_senha">Esqueci minha senha</a>
 
             </div>
 
