Alterando o index html para o envio ao repositorio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <div class="card-header">
 
-                <h2>Efetue o login abaixo</h2>
+                <h2>Efetue seu login abaixo</h2>
 
             </div>
 
